--- a/cheerup-ios/Base.lproj/Main.storyboard
+++ b/cheerup-ios/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GlX-2N-si8">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,50 +25,55 @@
                             <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hqh-Y4-87C">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="B3F-Um-Kqi">
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="B3F-Um-Kqi">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceM-Pd-M2A">
-                                            <rect key="frame" x="153" y="350" width="134" height="75"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BJm-oE-eJr">
+                                            <rect key="frame" x="100" y="326" width="312" height="30"/>
+                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CPI-bW-O7W">
+                                            <rect key="frame" x="100" y="386" width="312" height="30"/>
+                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" textContentType="password"/>
+                                        </textField>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zss-Jk-S3H">
+                                            <rect key="frame" x="176" y="481" width="60" height="57"/>
+                                            <state key="normal" image="Submit"/>
+                                            <connections>
+                                                <action selector="loginSubmit:" destination="GlX-2N-si8" eventType="touchUpInside" id="1NN-BI-9Ss"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceM-Pd-M2A">
+                                            <rect key="frame" x="125" y="178" width="95" height="48"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="CPI-bW-O7W" firstAttribute="top" secondItem="BJm-oE-eJr" secondAttribute="bottom" constant="30" id="9Nq-H3-Fpr"/>
+                                        <constraint firstItem="BJm-oE-eJr" firstAttribute="leading" secondItem="B3F-Um-Kqi" secondAttribute="leading" constant="100" id="BjM-Xk-Kth"/>
+                                        <constraint firstItem="CPI-bW-O7W" firstAttribute="leading" secondItem="B3F-Um-Kqi" secondAttribute="leading" constant="100" id="CJO-7U-qDm"/>
+                                        <constraint firstItem="CPI-bW-O7W" firstAttribute="width" secondItem="BJm-oE-eJr" secondAttribute="width" id="CTt-F7-IRl"/>
+                                        <constraint firstItem="BJm-oE-eJr" firstAttribute="top" secondItem="ceM-Pd-M2A" secondAttribute="bottom" constant="100" id="I84-bF-OtU"/>
+                                        <constraint firstItem="zss-Jk-S3H" firstAttribute="leading" secondItem="B3F-Um-Kqi" secondAttribute="leading" constant="176" id="Jyu-cF-Lg3"/>
+                                        <constraint firstItem="zss-Jk-S3H" firstAttribute="top" secondItem="CPI-bW-O7W" secondAttribute="bottom" constant="42" id="ZMC-Me-0fb"/>
+                                        <constraint firstItem="zss-Jk-S3H" firstAttribute="height" secondItem="B3F-Um-Kqi" secondAttribute="height" multiplier="0.05" id="a54-FJ-VLW"/>
+                                        <constraint firstItem="zss-Jk-S3H" firstAttribute="width" secondItem="B3F-Um-Kqi" secondAttribute="width" multiplier="0.1" id="ibl-wF-vez"/>
+                                        <constraint firstItem="ceM-Pd-M2A" firstAttribute="leading" secondItem="B3F-Um-Kqi" secondAttribute="leading" constant="125" id="qhw-1c-aIM"/>
+                                        <constraint firstItem="ceM-Pd-M2A" firstAttribute="top" secondItem="B3F-Um-Kqi" secondAttribute="top" constant="178" id="uAy-LK-TIi"/>
+                                        <constraint firstItem="BJm-oE-eJr" firstAttribute="width" secondItem="B3F-Um-Kqi" secondAttribute="width" multiplier="0.4" id="xcU-D9-uwy"/>
+                                    </constraints>
                                 </view>
                                 <blurEffect style="light"/>
                             </visualEffectView>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BJm-oE-eJr">
-                                <rect key="frame" x="180" y="520" width="84" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CPI-bW-O7W">
-                                <rect key="frame" x="179.5" y="581" width="83.5" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="password"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zss-Jk-S3H">
-                                <rect key="frame" x="179.5" y="653" width="78" height="73"/>
-                                <state key="normal" image="Submit"/>
-                                <connections>
-                                    <action selector="loginSubmit:" destination="GlX-2N-si8" eventType="touchUpInside" id="1NN-BI-9Ss"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="zss-Jk-S3H" firstAttribute="leading" secondItem="BJm-oE-eJr" secondAttribute="leading" id="6KY-dj-pxz"/>
-                            <constraint firstItem="zss-Jk-S3H" firstAttribute="top" secondItem="CPI-bW-O7W" secondAttribute="bottom" constant="42" id="8OU-Ll-2oU"/>
-                            <constraint firstItem="L1p-nh-RlJ" firstAttribute="bottom" secondItem="zss-Jk-S3H" secondAttribute="bottom" constant="136" id="PlJ-6n-3uT"/>
-                            <constraint firstItem="CPI-bW-O7W" firstAttribute="leading" secondItem="BJm-oE-eJr" secondAttribute="leading" id="ToP-DL-N5n"/>
-                            <constraint firstItem="BJm-oE-eJr" firstAttribute="centerX" secondItem="8W2-Iw-ScN" secondAttribute="centerX" id="Vqf-dJ-DYb"/>
-                            <constraint firstItem="CPI-bW-O7W" firstAttribute="top" secondItem="BJm-oE-eJr" secondAttribute="bottom" constant="31" id="y2r-ie-15Y"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="L1p-nh-RlJ"/>
                     </view>
                     <connections>
@@ -547,7 +552,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Nm0-na-Iwj"/>
-        <segue reference="MYv-Ym-pOO"/>
+        <segue reference="qd5-Rv-J7c"/>
         <segue reference="tvw-g4-8M4"/>
     </inferredMetricsTieBreakers>
 </document>
