updated posts view controller

--- a/cheerup-ios/Base.lproj/Main.storyboard
+++ b/cheerup-ios/Base.lproj/Main.storyboard
@@ -553,6 +553,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="Nm0-na-Iwj"/>
         <segue reference="qd5-Rv-J7c"/>
-        <segue reference="tvw-g4-8M4"/>
+        <segue reference="Ri8-8a-L0d"/>
     </inferredMetricsTieBreakers>
 </document>
