deleted UI code for Google ad

--- a/cheerup-ios/Base.lproj/Main.storyboard
+++ b/cheerup-ios/Base.lproj/Main.storyboard
@@ -739,7 +739,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="ZyJ-al-Ivw"/>
         <segue reference="Nli-IQ-Xo5"/>
-        <segue reference="MYv-Ym-pOO"/>
+        <segue reference="Qfz-Ba-CcF"/>
         <segue reference="tvw-g4-8M4"/>
         <segue reference="a2N-dQ-U6d"/>
     </inferredMetricsTieBreakers>
