--- a/cheerup-ios/Base.lproj/Main.storyboard
+++ b/cheerup-ios/Base.lproj/Main.storyboard
@@ -231,6 +231,7 @@
                                         <constraint firstItem="qxG-6B-JU0" firstAttribute="top" secondItem="asA-vY-wXY" secondAttribute="bottom" constant="20" id="sOF-Wt-Ozf"/>
                                         <constraint firstItem="e7z-Np-niN" firstAttribute="leading" secondItem="jhc-pu-hkz" secondAttribute="trailing" constant="46" id="vVy-8F-RjB"/>
                                         <constraint firstItem="mm4-1y-gw2" firstAttribute="top" secondItem="qxG-6B-JU0" secondAttribute="bottom" constant="39" id="yNZ-LH-o8Y"/>
+                                        <constraint firstAttribute="bottom" secondItem="vAn-dT-wZW" secondAttribute="bottom" id="zSP-fh-fM6"/>
                                     </constraints>
                                 </view>
                                 <blurEffect style="light"/>
